--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,10 @@
 <html lang="th">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="theme-color" content="#0f172a" />
+		<link rel="manifest" href="/manifest.json" />
+		<link rel="icon" type="image/png" href="/logogen.png" />
+		<link rel="apple-touch-icon" href="/logogen.png" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
