--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#0f172a" />
 		<link rel="manifest" href="/manifest.json" />
+		<link rel="icon" type="image/x-icon" href="/logogen.png" />
 		<link rel="icon" type="image/png" href="/logogen.png" />
+		<link rel="shortcut icon" href="/logogen.png" />
 		<link rel="apple-touch-icon" href="/logogen.png" />
 		%sveltekit.head%
 	</head>
